--- a/axis.html
+++ b/axis.html
@@ -39,16 +39,16 @@
 		<div class="carousel slide" id="myslider" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="scl/000.jpeg">
+					<img src="000.jpeg">
 					<div class="carousel-caption">
 						<h1 class="text-primary"></h1>
 					</div>
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/00.jpg">
+					<img src="00.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/0.jpg">
+					<img src="0.jpg">
 				</div>
 			</div>
 			<ul class="carousel-indicators">
@@ -74,40 +74,40 @@
 			<h1 class="text-center bg-warning">Gallery <i class="fa fa-file-image-o" aria-hidden="true"></i></h1>
 			<div class="row">
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (1).jpg" class="img-fluid">
+				<img src="a (1).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (2).jpg" class="img-fluid">
+				<img src="a (2).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (3).jpg" class="img-fluid">
+				<img src="a (3).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (4).jpg" class="img-fluid">
+				<img src="a (4).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (5).jpg" class="img-fluid">
+				<img src="a (5).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (6).jpg" class="img-fluid">
+				<img src="a (6).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (7).jpg" class="img-fluid">
+				<img src="a (7).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (8).jpg" class="img-fluid">
+				<img src="a (8).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (9).jpg" class="img-fluid">
+				<img src="a (9).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
 				<img src="scl/a (10).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (11).jpg" class="img-fluid">
+				<img src="a (11).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (12).jpg" class="img-fluid">
+				<img src="a (12).jpg" class="img-fluid">
 			</div>
 			</div>
 		</div>
@@ -119,28 +119,34 @@
 		<div class="carousel slide" id="myslider1" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="scl/v1.jpg">
+					<img src="v1.jpg">
 					<div class="carousel-caption">
 						<h1 class="text-primary"></h1>
 					</div>
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v4.jpg">
+					<img src="v2.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v5.jpg">
+					<img src="v3.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v6.jpg">
+					<img src="v4.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v7.jpg">
+					<img src="v5.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v8.jpg">
+					<img src="v6.jpg">
 				</div>
 				<div class="carousel-item ">
-					<img src="scl/v9.jpg">
+					<img src="v7.jpg">
+				</div>
+				<div class="carousel-item ">
+					<img src="v8.jpg">
+				</div>
+				<div class="carousel-item ">
+					<img src="v9.jpg">
 				</div>
 				</div>
 			<ul class="carousel-indicators">
@@ -177,8 +183,8 @@
 					<hr class="bg-light">
 					<a href="#" class="nav-link text-light"><h6>Message From Chairman</h6></a>
 					<a href="#" class="nav-link text-light"><h6>Message From M.D.</h6></a>
-					<a href="message-from-principal.html" class="nav-link text-light"><h6>Message From Principal</h6></a>
-					<a href="message-from-students.html" class="nav-link text-light"><h6>Message From Students</h6></a>
+					<a href="https://smilionaire.github.io/messagefromprincipal/" class="nav-link text-light"><h6>Message From Principal</h6></a>
+					<a href="https://smilionaire.github.io/messagefromstudents/" class="nav-link text-light"><h6>Message From Students</h6></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ADDRESS</h3>
 					<hr class="bg-light">
