--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 		<div class="carousel slide" id="myslider" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="000.jpeg">
+					<img src="000.jpeg" img-fluid>
 					<div class="carousel-caption">
 						<h1 class="text-primary"></h1>
 					</div>
 				</div>
 				<div class="carousel-item ">
-					<img src="00.jpg">
+					<img src="00.jpg" img-fluid>
 				</div>
 				<div class="carousel-item ">
-					<img src="0.jpg">
+					<img src="0.jpg" img-fluid>
 				</div>
 			</div>
 			<ul class="carousel-indicators">
