--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 		<div class="carousel slide" id="myslider" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="00.jpg" img-fluid>
+					<img src="000.jpeg" img-fluid>
 				</div>
 				<div class="carousel-item ">
-					<img src="0.jpg" img-fluid>
+					<img src="00.jpg" img-fluid>
 				</div>
 			</div>
 			<ul class="carousel-indicators">
@@ -66,40 +66,13 @@
 			<h1 class="text-center bg-warning">Gallery <i class="fa fa-file-image-o" aria-hidden="true"></i></h1>
 			<div class="row">
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (1).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (2).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (3).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (4).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (5).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (6).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (7).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
 				<img src="a (8).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
 				<img src="a (9).jpg" class="img-fluid">
 			</div>
 			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="scl/a (10).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
 				<img src="a (11).jpg" class="img-fluid">
-			</div>
-			<div class="card col-lg-4 col-md-4 col-12">
-				<img src="a (12).jpg" class="img-fluid">
 			</div>
 			</div>
 		</div>
