--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li class="dropdown-item bg-warning"><a href="" class="dropdown-item"><i class="fa fa-phone-square" aria-hidden="true"></i>Result</a></li>
 					</ul></li><hr class="bg-light">
 				<li class="nav-item active"><a href="#" class="nav-link">Event Updates <i class="fa fa-tasks" aria-hidden="true"></i></a></li><hr class="bg-light">
-				<li class="nav-item active"><a href="calendar.html" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
+				<li class="nav-item active"><a href="https://smilionaire.github.io/calendar/" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
 			</ul>
 			</div>
 		</div>
