--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	</div>
 	</section>
 	<section>
-		<div class="container-fluid mt-5 bg-dark">
+		<div class="container-fluid mt-5 bg-warning">
 			<div class="container">
 			<div class="row mt-5 text-light">
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">LEARN MORE</h3>
