--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="collapse navbar-collapse" id="navbarid">
 			<ul class="navbar-nav ml-auto text-center">
 				<li class="nav-item active"><a href="#" class="nav-link">Home <i class="fa fa-home" aria-hidden="true"></i></a></li><hr class="bg-light">
-				<li class="nav-item active"><a href="#" class="nav-link">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></li><hr class="bg-light">
+				<li class="nav-item active"><a href="https://smilionaire.github.io/about-axis/" class="nav-link">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></li><hr class="bg-light">
 				<li class="nav-item active dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contact Us <i class="fa fa-mobile" aria-hidden="true"></i></a>
 					<ul class="dropdown-menu bg-warning">
 						<li class="dropdown-item"><a href="tel:+977 71-541794" class="dropdown-item"><i class="fa fa-phone-square" aria-hidden="true"></i>[+977 71-541794]</a></li>
@@ -29,9 +29,11 @@
 						<li class="dropdown-item bg-success"><a href="" class="dropdown-item"><i class="fa fa-clock-o" aria-hidden="true"></i>Schedule</a></li>
 						<li class="dropdown-item bg-warning"><a href="" class="dropdown-item"><i class="fa fa-phone-square" aria-hidden="true"></i>Result</a></li>
 					</ul></li><hr class="bg-light">
-				<li class="nav-item active"><a href="#" class="nav-link">Event Updates <i class="fa fa-tasks" aria-hidden="true"></i></a></li><hr class="bg-light">
 				<li class="nav-item active"><a href="https://smilionaire.github.io/calendar/" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
-			</ul>
+		                <li class="nav-item active"><a href="#" class="nav-link">Notices <i class="fa fa-bell" aria-hidden="true"></i></a></li><hr class="bg-light">
+				<li class="nav-item active"><a href="#" class="nav-link">Library <i class="fa fa-paper-plane" aria-hidden="true"></i></a></li><hr class="bg-light">
+				<li class="nav-item active"><a href="calendar.html" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
+				</ul>
 			</div>
 		</div>
 	</nav>
@@ -140,7 +142,7 @@
 			<div class="row mt-5 text-light">
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">LEARN MORE</h3>
 					<hr class="bg-light">
-					<a href="#" class="nav-link text-light"><h6>About AHSS</h6></a>
+					<a href="https://smilionaire.github.io/about-axis/" class="nav-link text-light"><h6>About AHSS</h6></a>
 					<a href="#" class="nav-link text-light"><h6>Axis College</h6></a>
 					<a href="#" class="nav-link text-light"><h6>Education Ministry</h6></a>
 				</div>
