--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">LEARN MORE</h3>
 					<hr class="bg-light">
 					<a href="https://smilionaire.github.io/about-axis/" class="nav-link text-light"><h6>About AHSS</h6></a>
-					<a href="#" class="nav-link text-light"><h6>Axis College</h6></a>
+					<a href="https://smilionaire.github.io/axis-college/" class="nav-link text-light"><h6>Axis College</h6></a>
 					<a href="#" class="nav-link text-light"><h6>Education Ministry</h6></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ABOUT US</h3>
