--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ADDRESS</h3>
 					<hr class="bg-light">
-					<a href="#" class="nav-link text-light"><h6 class="mt-3">NamunaPath, Butwal-10, Sukhkhanagar, 00977, Nepal</h6></a>
+					<a href="" class="nav-link text-light"><h6 class="mt-3">NamunaPath, Butwal-10, Sukhkhanagar, 00977, Nepal</h6></a>
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3 text-center"><h3 class="text-center">QUICK LINKS</h3>
 					<hr class="bg-light">
