--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</ul></li><hr class="bg-light">
 				<li class="nav-item active"><a href="#" class="nav-link">Notices <i class="fa fa-bell" aria-hidden="true"></i></a></li><hr class="bg-light">
 				<li class="nav-item active"><a href="#" class="nav-link">Library <i class="fa fa-paper-plane" aria-hidden="true"></i></a></li><hr class="bg-light">
-				<li class="nav-item active"><a href="calendar.html" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
+				<li class="nav-item active"><a href="https://smilionaire.github.io/calendar/" class="nav-link">Calendar <i class="fa fa-calendar" aria-hidden="true"></i></a></li><hr class="bg-light">
 				</ul>
 			</div>
 		</div>
