--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<hr class="bg-light">
 					<a href="https://www.facebook.com/axisschool/" class="nav-link"><i class="fa fa-facebook-official fa-2x" style="color:#3b5998" aria-hidden="true"></i></a>
 					<i class="fa fa-instagram fa-2x ml-1" style="color:#fb3958" aria-hidden="true"></i>
-					<i class="fa fa-twitter fa-2x ml-1" style="color:#1da1f2" aria-hidden="true"></i>1
+					<i class="fa fa-twitter fa-2x ml-1" style="color:#1da1f2" aria-hidden="true"></i>
 					<i class="fa fa-envelope fa-2x ml-1" style="color:#EEEEEE" aria-hidden="true"></i>
 					<i class="fa fa-google-plus-square fa-2x ml-1" style="color:#CC3333" aria-hidden="true"></i>
 					<i class="fa fa-youtube-square fa-2x ml-1" style="color:#c4302b" aria-hidden="true"></i>
