--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3 text-center"><h3 class="text-center">QUICK LINKS</h3>
 					<hr class="bg-light">
-					<a href="https://www.facebook.com/axisschool/" class="nav-link"><i class="fa fa-facebook-official fa-2x" style="color:#3b5998" aria-hidden="true"></i></a>
+					<a href="https://www.facebook.com/axisschool/"><i class="fa fa-facebook-official fa-2x" style="color:#3b5998" aria-hidden="true"></i></a>
 					<i class="fa fa-instagram fa-2x ml-1" style="color:#fb3958" aria-hidden="true"></i>
 					<i class="fa fa-twitter fa-2x ml-1" style="color:#1da1f2" aria-hidden="true"></i>
 					<i class="fa fa-envelope fa-2x ml-1" style="color:#EEEEEE" aria-hidden="true"></i>
