--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 			</div>
 		</div>
 	</section>
+		<section>
+			<h3 class="bg-dark text-warning text-center"><strong>&copy;2019-->Designed By AMRIT THAPA MAGAR</strong></h3>
+	</section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.17/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
