--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	<div class="container mt-5">
 		<h1 class="text-center bg-warning">Latest Events <i class="fa fa-tasks" aria-hidden="true"></i>
 		</h1>
+		<div class="card">
 		<div class="carousel slide" id="myslider1" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -116,15 +117,15 @@
 				</div>
 				</div>
 			<ul class="carousel-indicators">
-				<li data-target="#myslider1" data-slide-to="0" class="active">
-				<li data-target="#myslider1" data-slide-to="1" class="">
-				<li data-target="#myslider1" data-slide-to="2" class="">
-				<li data-target="#myslider1" data-slide-to="3" class="">
-				<li data-target="#myslider1" data-slide-to="4" class="">
-				<li data-target="#myslider1" data-slide-to="5" class="">
-				<li data-target="#myslider1" data-slide-to="6" class="">
-				<li data-target="#myslider1" data-slide-to="7" class="">
-				<li data-target="#myslider1" data-slide-to="8" class="">
+				<li data-target="#myslider1" data-slide-to="0" class="active"></li>
+				<li data-target="#myslider1" data-slide-to="1" class=""></li>
+				<li data-target="#myslider1" data-slide-to="2" class=""></li>
+				<li data-target="#myslider1" data-slide-to="3" class=""></li>
+				<li data-target="#myslider1" data-slide-to="4" class=""></li>
+				<li data-target="#myslider1" data-slide-to="5" class=""></li>
+				<li data-target="#myslider1" data-slide-to="6" class=""></li>
+				<li data-target="#myslider1" data-slide-to="7" class=""></li>
+				<li data-target="#myslider1" data-slide-to="8" class=""></li>
 			</ul>
 			<a href="#myslider1" data-slide="prev" class="carousel-control-prev">
 				<span class="carousel-control-prev-icon"></span>
@@ -133,6 +134,10 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 		</div>
+		<div class="card-body bg-dark text-center text-light">
+			<p>AXIS clinched 3rd position in Manimukunda Cup Inter School District Level Boys VolleyBall Tournament 2076!</p>
+		</div>
+	</div>
 	</div>
 	</section>
 	<section>
