--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		</div>
 	</section>
 		<section>
-			<h3 class="bg-dark text-warning text-center"><strong>&copy;2019-->Designed By AMRIT THAPA MAGAR</strong></h3>
+			<h3 class="bg-dark text-warning text-center"><strong>&copy;2019-->Designed By<br>AMRIT THAPA MAGAR</strong></h3>
 	</section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.17/umd/popper.min.js"></script>
