--- a/index.html
+++ b/index.html
@@ -140,6 +140,83 @@
 	</div>
 	</div>
 	</section>
+		<section>
+		<div class="container mt-5" id="mymessage">
+		<div class="row">
+		    <div class="card col-lg-12 col-md-12 col-12">
+			<img src="scl/principal.jpg" class="img-fluid">
+			<div class="card-header text-center"><strong>CHUDA BAHADUR THAPA</strong>
+			</div>
+		<div class="card-body">
+			<p>I believe my role as an educator is to guide and nurture the next generation to establish skills to achieve health, respect, prosperity and fulfillment.
+
+I am passionate about students being empowered to succeed. As Principal, I use all tools available to inspire staff, students and community to work together to promote student achievement and well-being.  
+
+I am an avid supporter of effective and innovative professional development that encourages teachers and principals to be reflective and to continuously examine our practice to provide quality teaching and learning for each student. My role as Principal is to keep up with latest trends and research and be an active partner in the school's professional development.
+
+The ability to be innovative and creative is important to me. I enjoy being challenged and inspired by the people around me. I aim to enthuse and challenge staff and students to also be inventive and imaginative in their learning and day to day tasks.
+
+I believe that having quality, inspirational and passionate teachers is essential to a school's success. To borrow John Hattie's words; "teachers should build classroom climates where errors are welcome, student engagement is the norm, questioning is high and students gain reputations as effective learners." 
+
+I enjoy celebrating successes and acknowledge hard work of staff, students and community and believe this is one of the contributors fundamental to a happy school environment. All staff, students and community should feel valued and appreciated at school. 
+
+Community engagement and involvement in the school is important to me as Principal. I regularly consult with my community as part of school self review and encourage community engagement in the curriculum and learning programmes.</p>
+		</div>
+	        </div>
+	    </div>	
+	</div>	
+	</section>
+	<section>
+		<div class="container mt-5" id="mymessage">
+		<div class="row">
+		    <div class="card col-lg-4 col-md-4 col-sm-4">
+			<img src="scl/atm.jpg" class="img-fluid">
+			<div class="card-header text-center">AMRIT THAPA MAGAR
+			</div>
+		<div class="card-body">
+			<p>I am extremely delighted to announce myself as the student of Axis Higher Secondary School. The inspiring, Co-operative and friendly lectures have  enabled me to be what I am today and what I am striving for. I owe to whoever associated with AXIS for managing such congenial environment in this town for qualitative professional education. I can never forget the academic opportunities and experience that I have got through.</p>
+		</div>
+	        </div>
+	    </div>	
+	</div>	
+	</section>
+	<section>
+		<div class="container-fluid mt-5 bg-dark">
+			<div class="container">
+			<div class="row mt-5 text-light">
+				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">LEARN MORE</h3>
+					<hr class="bg-light">
+					<a href="about-axis.html" class="nav-link text-light"><h6>About AHSS</h6></a>
+					<a href="axis-college.html" class="nav-link text-light"><h6>Axis College</h6></a>
+					<a href="#" class="nav-link text-light"><h6>Education Ministry</h6></a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ABOUT US</h3>
+					<hr class="bg-light">
+					<button class="btn text-light text-center" onclick="chairman()"><h6>Message From Chairman</h6></button>
+					<button class="btn text-light text-center" onclick="md()"><h6>Message From M.D.</h6></button>
+					<button class="btn text-light text-center" onclick="principal()"><h6>Message From Principal</h6></button>
+					<button class="btn text-light text-center" onclick="students()"><h6>Message From Students</h6></button>
+				</div>
+				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ADDRESS</h3>
+					<hr class="bg-light">
+					<a href="#" class="nav-link text-light"><h6 class="mt-3">NamunaPath, Butwal-10, Sukhkhanagar, 00977, Nepal</h6></a>
+				</div>
+				<div class="col-lg-3 col-md-3 col-12 mt-3 text-center"><h3 class="text-center">QUICK LINKS</h3>
+					<hr class="bg-light">
+					<a href="https://www.facebook.com/axisschool/"><i class="fa fa-facebook-official fa-2x" style="color:#3b5998" aria-hidden="true"></i></a>
+					<i class="fa fa-instagram fa-2x ml-2" style="color:#fb3958" aria-hidden="true"></i>
+					<i class="fa fa-twitter fa-2x ml-2" style="color:#1da1f2" aria-hidden="true"></i>
+					<i class="fa fa-envelope fa-2x ml-2" style="color:#EEEEEE" aria-hidden="true"></i>
+					<i class="fa fa-google-plus-square fa-2x ml-2" style="color:#CC3333" aria-hidden="true"></i>
+					<i class="fa fa-youtube-square fa-2x ml-2" style="color:#c4302b" aria-hidden="true"></i>
+				</div>
+			</div>
+			</div>
+		</div>
+	</section>
+	<section>
+			<h3 class="bg-dark text-warning text-center"><strong>&copy;2019-->Designed By AMRIT THAPA MAGAR</strong></h3>
+	</section>
 	<section>
 		<div class="container-fluid mt-5 bg-dark">
 			<div class="container">
@@ -152,10 +229,10 @@
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ABOUT US</h3>
 					<hr class="bg-light">
-					<a href="#" class="nav-link text-light"><h6>Message From Chairman</h6></a>
-					<a href="#" class="nav-link text-light"><h6>Message From M.D.</h6></a>
-					<a href="https://smilionaire.github.io/messagefromprincipal/" class="nav-link text-light"><h6>Message From Principal</h6></a>
-					<a href="https://smilionaire.github.io/messagefromstudents/" class="nav-link text-light"><h6>Message From Students</h6></a>
+					<button class="btn text-light text-center" onclick="chairman()"><h6>Message From Chairman</h6></button>
+					<button class="btn text-light text-center" onclick="md()"><h6>Message From M.D.</h6></button>
+					<button class="btn text-light text-center" onclick="principal()"><h6>Message From Principal</h6></button>
+					<button class="btn text-light text-center" onclick="students()"><h6>Message From Students</h6></button>
 				</div>
 				<div class="col-lg-3 col-md-3 col-12 mt-3"><h3 class="text-center">ADDRESS</h3>
 					<hr class="bg-light">
@@ -177,6 +254,14 @@
 		<section>
 			<h3 class="bg-dark text-warning text-center"><strong>&copy;2019-->Designed By<br>AMRIT THAPA MAGAR</strong></h3>
 	</section>
+		<script type="text/javascript">
+		function principal(){
+			document.write("I believe my role as an educator is to guide and nurture the next generation to establish skills to achieve health, respect, prosperity and fulfillment. I am passionate about students being empowered to succeed. As Principal, I use all tools available to inspire staff, students and community to work together to promote student achievement and well-being. I am an avid supporter of effective and innovative professional development that encourages teachers and principals to be reflective and to continuously examine our practice to provide quality teaching and learning for each student. My role as Principal is to keep up with latest trends and research and be an active partner in the school's professional development. The ability to be innovative and creative is important to me. I enjoy being challenged and inspired by the people around me. I aim to enthuse and challenge staff and students to also be inventive and imaginative in their learning and day to day tasks. I believe that having quality, inspirational and passionate teachers is essential to a school's success. To borrow John Hattie's words; teachers should build classroom climates where errors are welcome, student engagement is the norm, questioning is high and students gain reputations as effective learners. I enjoy celebrating successes and acknowledge hard work of staff, students and community and believe this is one of the contributors fundamental to a happy school environment. All staff, students and community should feel valued and appreciated at school. Community engagement and involvement in the school is important to me as Principal. I regularly consult with my community as part of school self review and encourage community engagement in the curriculum and learning programmes.");
+		}
+		function students(){
+			document.write("I am extremely delighted to announce myself as the student of Axis Higher Secondary School. The inspiring, Co-operative and friendly lectures have  enabled me to be what I am today and what I am striving for. I owe to whoever associated with AXIS for managing such congenial environment in this town for qualitative professional education. I can never forget the academic opportunities and experience that I have got through.");
+		}
+	</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.17/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
