--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<div class="container mt-5" id="mymessage">
 		<div class="row">
 		    <div class="card col-lg-12 col-md-12 col-12">
-			<img src="scl/principal.jpg" class="img-fluid">
+			<img src="principal.jpg" class="img-fluid">
 			<div class="card-header text-center"><strong>CHUDA BAHADUR THAPA</strong>
 			</div>
 		<div class="card-body">
@@ -170,7 +170,7 @@ Community engagement and involvement in the school is important to me as Princip
 		<div class="container mt-5" id="mymessage">
 		<div class="row">
 		    <div class="card col-lg-4 col-md-4 col-sm-4">
-			<img src="scl/atm.jpg" class="img-fluid">
+			<img src="atm.jpg" class="img-fluid">
 			<div class="card-header text-center">AMRIT THAPA MAGAR
 			</div>
 		<div class="card-body">
