--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<div class="row">
 		    <div class="card col-lg-12 col-md-12 col-12">
 			<img src="principal.jpg" class="img-fluid">
-			<div class="card-header text-center"><strong>CHUDA BAHADUR THAPA</strong>
+			<div class="card-header text-center"><strong>C.B. THAPA</strong>
 			</div>
 		<div class="card-body">
 			<p>I believe my role as an educator is to guide and nurture the next generation to establish skills to achieve health, respect, prosperity and fulfillment.
